swagger: remove operations/cat
